--- a/uknown_n9zcud.bot_scam_do_not_run.json
+++ b/uknown_n9zcud.bot_scam_do_not_run.json
@@ -1,37 +1,50 @@
 {
 	"_id": "uknown_n9zcud.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "timeout",
 	"script": "uknown_n9zcud.bot_scam_do_not_run",
 	"sector": "NGC_5505",
 	"sec_level": 4,
 	"date_added": 1571530516796,
-	"last_scraped": 1571531258566,
+	"last_scraped": 1571531288529,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571530516796
 		}
 	],
-	"updt": 1571530814056,
-	"edit": 1,
+	"updt": 1571531263969,
+	"edit": 2,
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
 	],
-	"scrape_ct": 19,
-	"next_scrape": 1571531318566,
+	"scrape_ct": 18,
+	"next_scrape": 1571613807944,
 	"category": "risk_factor",
-	"last_update": 1571531258566,
+	"last_update": 1571531288529,
 	"output": [
 		{
 			"args": {},
 			"calls": 2395,
 			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"rial ",
+				"ike s",
+				"hope ",
+				"e the",
+				"## ho",
+				"portra",
+				"f portr"
+			]
+		},
+		{
+			"args": {
+				"do": "win"
+			},
+			"calls": 260,
+			"base": "YOU WON 2GC\n...if i could afford to pay out.",
 			"fragments": [
 				"rial ",
 				"ike s",
