--- a/unknown_ah0rz1.coil.json
+++ b/unknown_ah0rz1.coil.json
@@ -1,16 +1,91 @@
 {
 	"_id": "unknown_ah0rz1.coil",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_ah0rz1.coil",
 	"sector": "NGC_5505",
 	"sec_level": 4,
 	"date_added": 1571530516796,
-	"last_scraped": 0,
+	"last_scraped": 1571531319523,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571530516796
+		}
+	],
+	"updt": 1571530814056,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1571531379523,
+	"category": "coin_flipper",
+	"last_update": 1571531319523,
+	"output": [
+		{
+			"args": {},
+			"calls": 10950,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				"ovide",
+				" now, ",
+				"rship o",
+				"public ",
+				"nd the ",
+				"for pub",
+				"des. I ",
+				"amor fo"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"ovide",
+						" now, ",
+						"rship o",
+						"public ",
+						"for pub",
+						"des. I ",
+						"amor fo"
+					]
+				},
+				{
+					"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+					"frags": [
+						"nd the "
+					]
+				},
+				{
+					"document": "Proving/Children",
+					"frags": [
+						"nd the "
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "NOT FOUND",
+			"frags": [
+				"ovide",
+				" now, ",
+				"rship o",
+				"public ",
+				"for pub",
+				"des. I ",
+				"amor fo"
+			]
+		},
+		{
+			"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+			"frags": [
+				"nd the "
+			]
+		},
+		{
+			"document": "Proving/Children",
+			"frags": [
+				"nd the "
+			]
 		}
 	]
 }
