--- a/unknown_cnjcxi.js.json
+++ b/unknown_cnjcxi.js.json
@@ -1,16 +1,73 @@
 {
 	"_id": "unknown_cnjcxi.js",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "skip",
 	"script": "unknown_cnjcxi.js",
 	"sector": "SPC_2020",
 	"sec_level": 4,
 	"date_added": 1571530786680,
-	"last_scraped": 0,
+	"last_scraped": 1571531782360,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571530786680
+		}
+	],
+	"updt": 1571530814056,
+	"edit": 1,
+	"scrape_ct": 18,
+	"next_scrape": 1571531842360,
+	"category": "clicker",
+	"last_update": 1571531782360,
+	"output": [
+		{
+			"args": {},
+			"calls": 4131,
+			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
+			"fragments": [
+				"se it",
+				" thou",
+				"ld or ",
+				"g to m",
+				"t knowin",
+				"eat, but",
+				" just be",
+				" are peo"
+			]
+		},
+		{
+			"args": {
+				"click": true
+			},
+			"calls": 4312,
+			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
+			"fragments": [
+				"se it",
+				" thou",
+				"ld or ",
+				"g to m",
+				"t knowin",
+				"eat, but",
+				" just be",
+				" are peo"
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 448,
+			"base": "`LCLICK SECURED`",
+			"fragments": [
+				"se it",
+				" thou",
+				"ld or ",
+				"g to m",
+				"t knowin",
+				"eat, but",
+				" just be",
+				" are peo"
+			]
 		}
 	]
 }
