--- a/unknown_gr3ubx.backup.json
+++ b/unknown_gr3ubx.backup.json
@@ -1,16 +1,41 @@
 {
 	"_id": "unknown_gr3ubx.backup",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "skip",
 	"script": "unknown_gr3ubx.backup",
 	"sector": "NGC_5505",
 	"sec_level": 4,
 	"date_added": 1571530516796,
-	"last_scraped": 0,
+	"last_scraped": 1571531338201,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571530516796
+		}
+	],
+	"updt": 1571530814056,
+	"edit": 1,
+	"retry_args": [
+		{
+			"do": "LOSE"
+		}
+	],
+	"scrape_ct": 19,
+	"next_scrape": 1571531398201,
+	"category": "risk_factor",
+	"last_update": 1571531338201,
+	"output": [
+		{
+			"args": {},
+			"calls": 3092,
+			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"R | P",
+				" ERRO",
+				"PROG E",
+				"| TIME ",
+				"ERROR | "
+			]
 		}
 	]
 }
