--- a/uknown_wvp0h8.bot_scam_do_not_run.json
+++ b/uknown_wvp0h8.bot_scam_do_not_run.json
@@ -1,16 +1,63 @@
 {
 	"_id": "uknown_wvp0h8.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_wvp0h8.bot_scam_do_not_run",
 	"sector": "SPC_2020",
 	"sec_level": 4,
 	"date_added": 1571531077580,
-	"last_scraped": 0,
+	"last_scraped": 1571531953935,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531077580
+		}
+	],
+	"updt": 1571531263969,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1571532013935,
+	"category": "coin_flipper",
+	"last_update": 1571531953935,
+	"output": [
+		{
+			"args": {},
+			"calls": 2572,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				"e, Ma",
+				"ing ca",
+				"un play",
+				"oodbye,",
+				"3 Goodby",
+				"n R.\\n220"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"e, Ma",
+						"ing ca",
+						"un play",
+						"oodbye,",
+						"3 Goodby",
+						"n R.\\n220"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"e, Ma",
+				"ing ca",
+				"un play",
+				"oodbye,",
+				"3 Goodby",
+				"n R.\\n220"
+			]
 		}
 	]
 }
