--- a/unknown_yrfkx9.decorruptor.json
+++ b/unknown_yrfkx9.decorruptor.json
@@ -1,16 +1,69 @@
 {
 	"_id": "unknown_yrfkx9.decorruptor",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "player",
 	"script": "unknown_yrfkx9.decorruptor",
 	"sector": "SPC_2020",
 	"sec_level": 4,
 	"date_added": 1571530786680,
-	"last_scraped": 0,
+	"last_scraped": 1571531821046,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571530786680
 		}
-	]
+	],
+	"updt": 1571530814056,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1571625162002,
+	"category": "risk_factor",
+	"last_update": 1571531812150,
+	"output": [
+		{
+			"args": {},
+			"calls": 1208,
+			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"so th",
+				"'ve b",
+				"y're t",
+				"them - ",
+				"n engin",
+				"ing pro",
+				"o they'r",
+				"nking li",
+				"gineerin",
+				"been ask"
+			]
+		},
+		{
+			"args": {
+				"do": "win"
+			},
+			"calls": 110,
+			"base": "YOU WON 2GC\n...if i could afford to pay out.",
+			"fragments": [
+				"so th",
+				"'ve b",
+				"y're t",
+				"them - ",
+				"n engin",
+				"ing pro",
+				"o they'r",
+				"nking li",
+				"gineerin",
+				"been ask"
+			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "win"
+		},
+		{
+			"do": "LOSE"
+		}
+	],
+	"pl_output": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`"
 }
