--- a/uknown_949u94.xfer_upgrade_to.json
+++ b/uknown_949u94.xfer_upgrade_to.json
@@ -1,16 +1,59 @@
 {
 	"_id": "uknown_949u94.xfer_upgrade_to",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "skip",
 	"script": "uknown_949u94.xfer_upgrade_to",
 	"sector": "K_8779",
 	"sec_level": 4,
 	"date_added": 1571531309105,
-	"last_scraped": 0,
+	"last_scraped": 1571532457176,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531309105
+		}
+	],
+	"updt": 1571531716375,
+	"edit": 1,
+	"retry_args": [
+		{
+			"do": "LOSE"
+		}
+	],
+	"scrape_ct": 18,
+	"next_scrape": 1571532517176,
+	"category": "risk_factor",
+	"last_update": 1571532457176,
+	"output": [
+		{
+			"args": {},
+			"calls": 2122,
+			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"desig",
+				"21C3 O",
+				"ery cle",
+				" my des",
+				" what is",
+				"sign?\\n21",
+				"gn?\\n21C3"
+			]
+		},
+		{
+			"args": {
+				"do": "win"
+			},
+			"calls": 149,
+			"base": "YOU WON 2GC\n...if i could afford to pay out.",
+			"fragments": [
+				"desig",
+				"21C3 O",
+				"ery cle",
+				" my des",
+				" what is",
+				"sign?\\n21",
+				"gn?\\n21C3"
+			]
 		}
 	]
 }
