--- a/uknown_oon5ym.unlock_t1.json
+++ b/uknown_oon5ym.unlock_t1.json
@@ -1,16 +1,46 @@
 {
 	"_id": "uknown_oon5ym.unlock_t1",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "skip",
 	"script": "uknown_oon5ym.unlock_t1",
 	"sector": "SPC_8152",
 	"sec_level": 4,
 	"date_added": 1571531842311,
-	"last_scraped": 0,
+	"last_scraped": 1571533160094,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531842311
+		}
+	],
+	"updt": 1571531941567,
+	"edit": 1,
+	"retry_args": [
+		{
+			"do": "LOSE"
+		}
+	],
+	"scrape_ct": 20,
+	"next_scrape": 1571533220094,
+	"category": "risk_factor",
+	"last_update": 1571533160094,
+	"output": [
+		{
+			"args": {},
+			"calls": 767,
+			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"e the",
+				"do we",
+				" soci",
+				"we val",
+				"the ot",
+				"alue a",
+				"(chats ",
+				"ransacti",
+				"chats an",
+				" so, whi"
+			]
 		}
 	]
 }
