--- a/uknown_t58dw4.bot_scam_do_not_run.json
+++ b/uknown_t58dw4.bot_scam_do_not_run.json
@@ -1,16 +1,60 @@
 {
 	"_id": "uknown_t58dw4.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_t58dw4.bot_scam_do_not_run",
 	"sector": "SPC_8152",
 	"sec_level": 4,
 	"date_added": 1571531842311,
-	"last_scraped": 0,
+	"last_scraped": 1571533250215,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531842311
+		}
+	],
+	"updt": 1571531941567,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1571533310215,
+	"category": "plant_sim",
+	"last_update": 1571533250215,
+	"output": [
+		{
+			"args": {},
+			"calls": 892,
+			"base": "c:\"9wm362\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				"on, Mal",
+				". I hav",
+				"question",
+				"I have\\n",
+				"one?\\n1E4"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"on, Mal",
+						". I hav",
+						"question",
+						"I have\\n",
+						"one?\\n1E4"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"on, Mal",
+				". I hav",
+				"question",
+				"I have\\n",
+				"one?\\n1E4"
+			]
 		}
 	]
 }
