--- a/unknown_0axb7v.loic.json
+++ b/unknown_0axb7v.loic.json
@@ -1,16 +1,40 @@
 {
 	"_id": "unknown_0axb7v.loic",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_0axb7v.loic",
 	"sector": "SPC_8152",
 	"sec_level": 4,
 	"date_added": 1571531842311,
-	"last_scraped": 0,
+	"last_scraped": 1571533288148,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531842311
+		}
+	],
+	"updt": 1571531941567,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1571533348148,
+	"category": "plant_sim",
+	"last_update": 1571533288148,
+	"output": [
+		{
+			"args": {},
+			"calls": 1401,
+			"base": "c:\"j04yl2\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
+			"fragments": [
+				"ty in",
+				"s with",
+				"nd imp",
+				"ment s",
+				"ions v",
+				" offic",
+				"of the ",
+				"one netw",
+				"leaving "
+			]
 		}
 	]
 }
