--- a/unknown_ythy5v.lib_db.json
+++ b/unknown_ythy5v.lib_db.json
@@ -1,16 +1,66 @@
 {
 	"_id": "unknown_ythy5v.lib_db",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_ythy5v.lib_db",
 	"sector": "K_8779",
 	"sec_level": 4,
 	"date_added": 1571531309105,
-	"last_scraped": 0,
+	"last_scraped": 1571532595783,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531309105
+		}
+	],
+	"updt": 1571531716375,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1571532655783,
+	"category": "coin_flipper",
+	"last_update": 1571532595783,
+	"output": [
+		{
+			"args": {},
+			"calls": 6132,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				"nt. i",
+				"t holl",
+				"ollist",
+				"r a mom",
+				" is she",
+				"forget h",
+				"e necess"
+			],
+			"hits": [
+				{
+					"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
+					"frags": [
+						"nt. i",
+						"t holl",
+						"ollist",
+						"r a mom",
+						" is she",
+						"forget h",
+						"e necess"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
+			"frags": [
+				"nt. i",
+				"t holl",
+				"ollist",
+				"r a mom",
+				" is she",
+				"forget h",
+				"e necess"
+			]
 		}
 	]
 }
