--- a/uknown_luqvkx.t1_scrape.json
+++ b/uknown_luqvkx.t1_scrape.json
@@ -1,16 +1,66 @@
 {
 	"_id": "uknown_luqvkx.t1_scrape",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_luqvkx.t1_scrape",
 	"sector": "K_8779",
 	"sec_level": 4,
 	"date_added": 1571531582769,
-	"last_scraped": 0,
+	"last_scraped": 1571532695417,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531582769
+		}
+	],
+	"updt": 1571531716375,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1571532755417,
+	"category": "coin_flipper",
+	"last_update": 1571532695417,
+	"output": [
+		{
+			"args": {},
+			"calls": 6669,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				"he big",
+				"one, th",
+				"This is",
+				" Saleem",
+				"s is the",
+				"ig one, ",
+				". ## Hi!"
+			],
+			"hits": [
+				{
+					"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
+					"frags": [
+						"he big",
+						"one, th",
+						"This is",
+						" Saleem",
+						"s is the",
+						"ig one, ",
+						". ## Hi!"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
+			"frags": [
+				"he big",
+				"one, th",
+				"This is",
+				" Saleem",
+				"s is the",
+				"ig one, ",
+				". ## Hi!"
+			]
 		}
 	]
 }
