--- a/unknown_9v29je.t3brute.json
+++ b/unknown_9v29je.t3brute.json
@@ -1,16 +1,63 @@
 {
 	"_id": "unknown_9v29je.t3brute",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_9v29je.t3brute",
 	"sector": "K_8779",
 	"sec_level": 4,
 	"date_added": 1571531309105,
-	"last_scraped": 0,
+	"last_scraped": 1571532586089,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531309105
+		}
+	],
+	"updt": 1571531716375,
+	"edit": 1,
+	"scrape_ct": 18,
+	"next_scrape": 1571532646089,
+	"category": "dice_roller",
+	"last_update": 1571532586089,
+	"output": [
+		{
+			"args": {},
+			"calls": 8862,
+			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
+			"fragments": [
+				"20CC t",
+				"e win?\\n",
+				"20D6 Abs",
+				"0D5 Did ",
+				" you let",
+				" this la"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"20CC t",
+						"e win?\\n",
+						"20D6 Abs",
+						"0D5 Did ",
+						" you let",
+						" this la"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"20CC t",
+				"e win?\\n",
+				"20D6 Abs",
+				"0D5 Did ",
+				" you let",
+				" this la"
+			]
 		}
 	]
 }
