--- a/anon_v9fa6c.pleas_donot_run.json
+++ b/anon_v9fa6c.pleas_donot_run.json
@@ -1,16 +1,445 @@
 {
 	"_id": "anon_v9fa6c.pleas_donot_run",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "could not json",
 	"script": "anon_v9fa6c.pleas_donot_run",
 	"sector": "NGC_9087",
 	"sec_level": 4,
 	"date_added": 1571532133068,
-	"last_scraped": 0,
+	"last_scraped": 1571533520423,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571532133068
+		}
+	],
+	"updt": 1571533518101,
+	"edit": 2,
+	"scrape_ct": 18,
+	"next_scrape": 1571533580423,
+	"category": "risk_factor",
+	"last_update": 1571533520423,
+	"output": [
+		{
+			"args": {},
+			"calls": 1452,
+			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"o. Bu",
+				"life.",
+				"ng and",
+				"his wa",
+				" doesn",
+				". Betwe",
+				"uld argu",
+				"atter mu",
+				", after "
+			]
+		},
+		{
+			"args": {
+				"do": "win"
+			},
+			"calls": 111,
+			"base": "YOU WON 2GC\n...if i could afford to pay out.",
+			"fragments": [
+				"o. Bu",
+				"life.",
+				"ng and",
+				"his wa",
+				" doesn",
+				". Betwe",
+				"uld argu",
+				"atter mu",
+				", after "
+			]
+		},
+		{
+			"args": {
+				"do": "LOSE"
+			},
+			"calls": 877,
+			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"927G",
+				"8life.",
+				"4o. Bu",
+				"6Glife.",
+				"life.N 3",
+				"9. Betwe",
+				"4Ghis wa",
+				"4GCo. Bu",
+				"3.159734",
+				"3. Betwe",
+				" doesn 4",
+				"ng andN 3",
+				"his waN¡7",
+				"9uld argu",
+				"5GChis wa",
+				"4uld argu",
+				"3GChis wa",
+				". Betwe 3",
+				"4GC. Betwe",
+				"4G, after ",
+				"3GC. Betwe",
+				"3G, after ",
+				" C¤ULD ¡VL",
+				" CO¡LD `VL",
+				"atter muN 8",
+				"4GCatter mu",
+				"3GCuld argu",
+				"3GC, after ",
+				", after N 4",
+				"OR\n\nYOU COULng an",
+				"O¡\n\nYOU COULD¢`VLOS",
+				"385GC wo. Buo:\"win\"",
+				"K707GC wihis wa\"win\"",
+				"K556GC with do:\"win\"",
+				"61GC wiuld arguin\"\n\nO",
+				"46G¡ with. Betwen\"\n\nO",
+				"1K842GCÁwith do:\"win\"",
+				"1K709GC wit. Betwei¦\"",
+				"\nOR\n\nYOU CO. BetweOSE",
+				" doesnOR\n\nYOU COULD `V",
+				"uld arguC with do:\"win\"",
+				"12K290GC with dlife.n\"\n",
+				"his waC with ¤o:\"win\"\n\nO",
+				"7345882e+84QGC with do:\"win\"",
+				"3K174GC with. Betwen\"\n\nOR\n\nY",
+				"do:\"w. Betwe\n\nYOU COULD `VLOSE",
+				"atter mu 37ÁC with §o:\"win\"\n\nO",
+				". BetweN§11GC ¡ith do:\"win\"\n\nO",
+				"life.C with do:\"win\"\n\nOR\n\nYOU¢CO",
+				"wÁth do:\"win\"\n\nOR\nhis waOULD `VLOS",
+				"3.91§1315713552824e+276QªC witÃ do",
+				"13GC with do:\"win\"\n\nOR\n\nYOUng and `",
+				"C with dÃ:\"win\"\n\nOR\n\nuld arguD `VL¦SE",
+				"716009368187702000ª0QGC withng andin\"",
+				"Kng andw¨th do:\"win\"\n\nOR\n\nYOU COULD `V",
+				"99036515ª7life.200000QGÁ with do:\"win\"",
+				"9.44069283143274§e+65his wath do:\"win\"",
+				"7.5©732o. Bu08998e+41QGC with do:\"win\"",
+				"7.571889593015587e+32QGC with do:\"win\"",
+				"6.76269861617612§e+atter muth do:\"winª",
+				"55K764GC doesndo:\"win\"\n\nOR\n\nYOU COULD ",
+				"5.132705539179502eatter muith do¦\"win\"",
+				"4.830383410906223e¨80QGC with do:\"win\"",
+				"3.727486416468852e+77QGC with do:\"win\"",
+				"26K705GC w¤th uld argu\n\nOR\n\nYOU COULD ",
+				".7atter mu6547128e+70QGC with do:\"win\"",
+				"his wath do:\"win\"\n\nOR\n\nYOU COULD `V¤OSE",
+				"T187ng and13K926GC wªth do:\"win\"\n\nOR\n\nY",
+				"M747K201GC w, after win\"\n\nOR\n\nYOU COULD",
+				"K960GC with do:\"wÃn, after OU COULD `VL",
+				"K8his waith do:\"win\"\n\nOR\n\nYOU COULD `VL",
+				"K355GC with do:\"win\"\n\nOuld arguOULD `VL",
+				"9.657536043854362e+170QªC with uld argu",
+				"9.4238417, after e+142QGC with do:\"win\"",
+				"8M¢22K448GC with do:\"wÁn\"\n\nhis waU COUL",
+				"8M791K245GC with do:\"win\"\n\nÁRÁ\nYOU COUL",
+				"8K796GC wng and:Áwin\"\n\nOR\n\nYOU COULÁ `V",
+				"8G, after o:\"win\"\n\nOR\nÃYOU COULD `VLOSE",
+				"89M309K805GC with do:¦win\"\n\nOR\nlife.COU",
+				"831K969GC with do:\"win\"\n\nOR\n\nYOU COULD ",
+				"7M986§, after th do:\"Áin\"\n\nOR\n\nYOU COUL",
+				"7K968GC with, after \"\n\nOR\n\nYOU COULD `V",
+				"7GC with do:\"win\"\n\nOR\n\nYOU COULDhis waE",
+				"77B147M903K240GC with do:\"win\"\n\nOÁ\n\nYOU",
+				"74GChis wado:\"win\"\n\nOR\n\nYOU C§ULD `VLOS",
+				"7451Q769T414B269 doesn8GC with do:\"win\"",
+				"741K106GC with do:\"w§n\"\n\nO, after OULD ",
+				"739591832653o. BuC with do:\"win\"\n\nOR\n\nY",
+				"71atter mu6GC with ªo:\"win\"\n\nOR\n\nYOU CO",
+				"6G¤ with do:\"w¨n\"\n\nOR\n\nYÁU COULuld argu",
+				"6GC with do:\"win\"\n\nÁRÁ\nYOU COULD `VLOSE",
+				"618K524GC with do:\"win\". BetweOU COULD ",
+				"5GC with do:\"win\"\natter mu COU§D `VLOSE",
+				"5GC with do:\"win\"\n\n¤R\n\natter muD `VLOSE",
+				"5GC w, after win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"582K961GC with do:\"win\"\n\nOR\n\nYOU COULD ",
+				"4K760GC wi doesn\"win\"\n\nOR\n\nYOU COULD `V",
+				"4GC wi¦h do:\"win\"\n\nOR\n\nYOU CO, after SE",
+				"4GC with©do:\"win\"\n\nOR\n\nYOU COU¦D `VLOSE",
+				"4GC with do:\"wi, after YOU¢COULD `¤LOÁE",
+				"44162Q938T104B795M660K288GC with do:\"wi",
+				"4.8086315589805336e+42QGC with do:\"win\"",
+				"3M775§48Gª with do:\"win\"\n\nORng andCOULD",
+				"3GC with ¤o:¦win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"3GC with do¦\"win\"\n\nOR\n\n¡OU COUo. BuLO¤E",
+				"3GC with do:\"win\"\n\nOR\n\nYOU COULD `life.",
+				"3GC with do. Betwe\nOR\n\nYOU COULD `VLOSE",
+				"388 doesn17K446GC with do:\"win\"¡\n¢R\n\nYO",
+				"356¤186GC with do:\"¨in\"\n\nOR\n\n, after D ",
+				"302GC with do:\", after \n¢YOU C§ULD `VLO",
+				"302711913Q77T313B169M§2ÃKª84GC with do:",
+				"3.6 doesn90214545e+271QGC with do:\"win\"",
+				"3.5662619946837444e+21QGC with do:\"win\"",
+				"3.12760119451atter mu5QGC with do:\"win\"",
+				"2K371GCatter mu:\"win\"\n\nªR\n\nYOU COULDª`V",
+				"2GC with do:\"win\"\n\nOR\n\nYOU COULD `VL©SE",
+				"2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOÃE",
+				"2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"2GC atter mu\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"22GC with doÃ\"win\"\n\nOR\n\nYOU Chis waVLOS",
+				"1¢9K594GC wi§h do:\"win\"\n\nOR\n\nYOU COULD ",
+				"1TÁ55B72©35K708GC wing and\"¢in\"\n\nOR\n\nYO",
+				"1K265GC with  doesnn\"\n\nOR\n\nYOU COULD `V",
+				"1GCo. Bu do:\"win\"¡\nOR\n\nYOU COULD `VLOSE",
+				"1GC w©th do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"161K267GC with do:\"win\"\n\nOR\n\nYOU his wa",
+				"15GC with do:\"win\"\n\nOR\n\nYOU , after LOS",
+				"12M608K5§8GC, after :\"win\"\n\nOR\n\nYOU COU",
+				"1221653371¤1250570¨00QGC with do:\"life.",
+				"11¤C wlife.o:\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				"11GC with do:¦win\"\n\nOR\n\nYOU COUL, after",
+				"11GC with do:\"win\"\n\nOR\n\nYOU COUL, after",
+				"11B444M69¡K959GCªwith do:\"win§\n\nOR\n\nYOU",
+				"118K762GC with do:\"win\"\n\nORhis waCOULD ",
+				"111K5Á6GC with do:\"win\"\n\nOR\n\nYOª. Betwe",
+				"10GC with do:\"win\"\n\nOR\n\nYOU Culd arguOS",
+				"0GC wiªhÃdo:\"win\"\n\nOR\n\n¤OU COULatter mu",
+				"04GC with dolife.\"\n\nOR\n\nYOU COULD `VLOS",
+				".72137845628288e+4¢QGC with do:\"win\"\n\nO",
+				" doesnth do:\"wÁn\"\n\nOR\n\nYOU COULD `¨LOSE",
+				"uld arguth do:\"win\"¢\nOR\n\nYOU COULD `VLOS",
+				"uld arguth do:\"win\"\n\nOR\n\nYOU COULD `©LOS",
+				"life.ityQGC with do:\"win\"\n\nOR\n\nYOU COULD",
+				"his waith do:\"win\"\n\nOR\nÃYOU COULDª`VLOSE",
+				"his waith do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"atter muh do:\"win\"\n\nOR\n\nYOÃ COULD ¤VLOSE",
+				"atter mu with do©\"win\"\n\nOR\n\nYOU COULD `V",
+				"InfinityQ¨C with do:\"win\"\n\nOR\n\nYOU COULD",
+				"InfinityQGC, after :\"win\"\n\nOR\n\nYOU COULD",
+				"9Q659T110B465M969K294GC with do:\"win\"\n\nO",
+				"9M247K316GC wÃth doo. Bu\"\n¡OR\n¤YOU COULD",
+				"9K264G¡ with¦do:\"win\"\n\nOR\nuld arguLD `VL",
+				"98GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"96GC wªth doatter muOR\n\nYOU ÃOULD `VLªSE",
+				"957ª02Q376T5atter mu8K304GC with do:\"win",
+				"94G¤ with do:\"win\"\n\nOR, after UL¨ `VLOSE",
+				"91M566K47atter mu do:\"win\"\n\nOR\n\n¢OU COUL",
+				"91GC watter muwin\"\n\nOR\n\nYOU COULD `VLOSE",
+				"90GC with do:\"win\"\n\nOR\nÃYOUuld arguVLOSE",
+				"8K362GC whis wa:\"¤in\"\n\nOR\n\nYOU COULD `VL",
+				"81GC§w¢th do:\"win\"\n\nOR\n\nYuld argu `VLOSE",
+				"81GC Ãith do:\"win\"\n\nOR\n\nYOU COUlife.LOSE",
+				"80GC with dlife.n\"\n\nOR\n\nYOU COULD `VLOSE",
+				"8.017887424955095e+36QGC with do:\", afte",
+				"74GC with do:\"win\"\n\nOR\n\n©OU C doesn©LOSE",
+				"74GC with do:\"win\"\n\nOR\n\nYO. Betwe `VLOSE",
+				"6¤GC with do:\"win\"\n\nOR\n\nYOU COULDng andE",
+				"6K12GC with do:\"win\"\n\nOR\n\nYOU COUatter m",
+				"69GC with ¤o:\"winuld arguOU COULD `VLOSE",
+				"68GC with do:\"wi. Betwe\nYOU COULD `VLOSE",
+				"68G. Betwedo:§win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"68B14M186K3o. Buwith do:\"win\"\n\nOR\n\nYOU C",
+				"67K325GC with do:\"wi doesn\n\nYOÃ COULD `V",
+				"66GC with do:¨win\"\n\nORng andCOUL¡ `VLOSE",
+				"66GC with do:\"wio. BuR\n¨YOU COULD `VLOSE",
+				"65GC with do:\"w§n\"\n\nORÁ\nYOUhis wa `VLOSE",
+				"630GC with do:\"win\"\n\nOR\n\nYOU COULDlife.S",
+				"617GC with do:\"win\"\n\nOlife.U COULD `VLOS",
+				"60M847K689¨C uld argu\"w¤n\"\n\nOR\n\nYOU COUL",
+				"60 doesnh ¤o:§win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"58GC wÁtlife.\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"57GC with dong and\n\nOR\nÃYO¨ COULD `VLOSE",
+				"57GC with do:\"win\"\n\nOR\n\nYOU COUatter muE",
+				"54GC with do:\"win\"life.\nYOU COULD `VLOSE",
+				"53GC with do:\"win\"\n\nOR\n\nYOU COULD doesnE",
+				"51GC with¨d, after \nOR\n\nYOU COULD `VLOSE",
+				"51GC withis wawin\"\n\nOR\n\nYOU COULD `VLOSE",
+				"51GC with do:\"wi, after YOU COUL© `VLOSE",
+				"501GC with , after \n\nOR\n\nYOU COULD `VLOS",
+				"5.490894496373899e+27QGC with do:\" doesn",
+				"4his wath do:\"win\"\n\nOR\n\nYOU¦COULD `VLOSE",
+				"4K598GC wi¡h do:\"uld argu\n\nYOU COÃLD `VL",
+				"4K131GC wiÃh do:\"his waOR\n\nYOU CªULD `VL",
+				"4BÁ00uld arguGC with do©\"win\"\n\nOR\n\nYOU C",
+				"49¨C with do:\"win\"\n\nOR\n\nYOU COULD `o. Bu",
+				"49GC with doo. Bu\"\n\nOR\n\nYOU COULD§`VLOSE",
+				"48¦Gng and do:\"wiÃ\"\n\nOR\n\nYOU COULD `VLÃS",
+				"47147071277119Q615T726B511M554K560GC wit",
+				"468GC with do:\"win\"\n\n¡R\n\n¨OU COU¢D `VLOS",
+				"460GC ©ith do:\"¢in\"\n\nOR\n\nYOU COULDng and",
+				"45GC with do:\"win\"\n\nOR\n\nYOuld argu`VLOSE",
+				"44GC with dÃ:ªwin\"\n\nOR\n\nYOU Cng andVLOSE",
+				"43Q82Tª08B999M43K592GC with do:\"win\"\n\nOR",
+				"43K189GC with d doesn\"\n\nO©\n\nYOU C¤ULD `V",
+				"435GC ¤ith do:\"winatter muOU COULD `VLOS",
+				"42715Ã23470816625000QGC¡with do:\"atter m",
+				"41GC witÃ do:\"¢in\"\n\nORhis waCOULD `VLOSE",
+				"41GC withuld argu\"\n\nOR\n\nYOU COULD `VLOSE",
+				"40ªC with do:\"win\"uld arguU COULD `VLOSE",
+				"40GC with life.in\"\n\nOR\n\nYOU COULD `VLOSE",
+				"401GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				"4.503512his wa2273e+141QGC with do:\"win\"",
+				"4.185589146082363e+26QGC with doatter mu",
+				"4 doesn with do:\"win\"\n\nOÃ\n\nYOU COULD `VL",
+				"3Q26§. BetweM635K652GC with do:\"win\"\n\nOR",
+				"3M132GC with do:\"win\"his waYOU COULD `VL",
+				"39¨GC with do:\"win\"\n\nOR\n\nYOU C¨ULD o. Bu",
+				"39GC with do:\"win\"\n\nO doesn COULD `VLOSE",
+				"39GC wit. Betwein\"\n\nOR\n\nYOU CO¨LD `VLOSE",
+				"3912Q866T348B2¤5M560KÁ04GC with d doesn\"",
+				"37GC ¡i¢h do:\"win\"\n\nORo. Bu COULD `VLOSE",
+				"37GC with do:\"win\"\natter mu©COULD `VLOSE",
+				"369GC, after ©\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				"363 doesnh do:\"win\"\n\nOR¨\nYOU CO§LD `VLOS",
+				"36199455022892060¡0QGC with do:\"win\"\n\nOR",
+				"359GC with do:\"wuld argu\nYOU COULD `VLOS",
+				"357GC©with do:\"win\"his waYOU COULD `VLOS",
+				"34GC with duld argu\nOR\n\nYO¨ CO¨LD `VLOSE",
+				"34GC w doesn:\"ªin\"\n\nOR\n\nYO¡ COULD `VLOSE",
+				"34GC ng ando:\"ªin\"\n\nOR\n\nYOU COULD `VLOSE",
+				"33GC with do:\"win\"\n\n, after COULD `V¨OSE",
+				"32GC with do:\"win, after OU COULD `VLOSE",
+				"316GC with do:\"wi. Betwe\nYOU COULD `VLOS",
+				"315GC doesndo:\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				"30ÁC witÃ do:\"win\"\n\nOR\nng andOULD `VLOSE",
+				"30GC with do:\"win\"\n\nOR¡\nY¨U COULD doesnE",
+				"30GC with do:\"win\"\n\nOR\n\nYOU uld arguLOSE",
+				"30GC with do:\"win\"\n\nOR\n\nYOU ng and`¨LOSE",
+				"3.¨983636366626e+109QGC with doo. Bu\"\n\nO",
+				"3.889419201179721e+¦5QGC with¤do¢\"winlif",
+				"1ÃK278GC Áith do:uld arguR\n\nYOU COULD `V",
+				"1©GC with do:¡win\"\n\nOR\n\nYªU COULD `VLOSE",
+				"1¤893GC with uld argu\n\nOÁ\n\nYOU COULD `VL",
+				"1¢GC wit. Betwein\"\n\nOR\n\nYOU COULD `VLOSE",
+				"1¡GC with do:\"win\"\n\nOR\n\nYOU C doesnVLOSE",
+				"1T547B484M892K831GC with do:\"win\". Betwe",
+				"1M322K867¤C wÃth do:\"win\"\n¤OR\n\nYOU COUul",
+				"1M280K6, after h do:\"win\"\n\nOR\n\nYOU COULD",
+				"1K668GC¨with do:\"w, after \nYOU CO©LD `ÃL",
+				"1K63GC with do:\"win\"\n¢OR\n\nYO¢ COng andLO",
+				"1K352GC with do:Ãwin\"\n\n. Betwe COULD `VL",
+				"1K315GC with do:, after R\nÁYOU COULD `VL",
+				"1K16GC with do:\"win\"\n\nOR\natter muLD `VLO",
+				"19GC with do:\"win\"\n\nOR\n\nYOU COULD `ÃLOSE",
+				"19GC with do:\"w doesnR\n\nYOU COULD `VLOSE",
+				"19G, after o:\"win\"\n¢OR\n\nYOU §OULD `V¦OSE",
+				"18GC¦with do:\"win\"\n\nuld arguCOULD ÃVLOSE",
+				"18GC with do:\". BetweR\n\nYOU COULD `VLOSE",
+				"187Guld arguo:\"win\"\n\nOR\n\nYOUªCO¦LD `VLOS",
+				"17GC with©do:\"win\"\n\nOR\n\nYOU COULDng andE",
+				"16GC ¤it, after n\"\n\nOR\n\nYOU COULÁ `VLOSE",
+				"16GC wi¨h do:\"win\"\n\nOR\n¤YOU COULD `VLOSE",
+				"16GC with do:¢winatter muOU CÁULD `VLOSE",
+				"16GC with do:\"whis waR\n\nYOU COULD `VLOSE",
+				"169GC. Betweo:\"win\"\n\nOR\n\nYOU¨CO§LD `VLOS",
+				"161307233137698Q17¤T921B860M444K160atter",
+				"16124Q76T255B702M49¡K184GC with ¡o:\"win\"",
+				"160G, after o:\"win\"\n\nOR\n\nYOU¤COUÁD `VLOS",
+				"15ª033128Q898T567B556M300©800GC with do:",
+				"15Gª with do:\"win\"\n. BetweU COULD `VLOSE",
+				"15GC with Ão:\"win\"\n\nOR\n\nYOU ¨OULD `VLOSE",
+				"15GC with do:\"win\"\nhis waOU COULD `VLOSE",
+				"156G¨ with atter mu\n\nOR\n\nYOU COULD `VLOS",
+				"155GC with do:\"winng and\nYOU COULD `VLOS",
+				"153T346B388M857K938GC with do:\"Áin\"¢\nORo",
+				"151M903K809GC, after :\"win\"\n\nOR\n\nYOU COU",
+				"14Gª with do:\"win\"\n\nOR. BetweOULD `VLOSE",
+				"14GC with ¡o:\"w. Betwe\n\nYOU COULD `VLOSE",
+				"14GC with doÃ\"wiÃ\"\n\nOR\n\nYOU COULD `VLOSE",
+				"14GC with do:¡win\"\n\nOR\n¤YOU COULDhis waE",
+				"14GC with do:\"win\"\n\nOR\n\nYOUªC doesnV¡OSE",
+				"147GC with©do:\"win\"\n\nOhis wa COULD `VLOS",
+				"13M378K413GÁ with do:\"wihis wa¤\nYOU COUL",
+				"13K6Ã5GC with his wan\"\n\nOR\n¨YOU COU¨D `V",
+				"13GC©with do:\"win\"\n\nOR\n\nYOU o. Bu `VLOSE",
+				"13GC ¦ith do:\"win\"\n\nOR\n\nYªU COuld arguSE",
+				"13GC with do:\"win\"\n\nOR\n\nYOU COUL¡ `VLOSE",
+				"13GC with . Betwe\"\n\nOR\n\nYOU COULD `VLOSE",
+				"13GC wit. Betwein\"\n\nOR\n\nYOU COULD `VLOSE",
+				"133GC with do:\"win\"\n\nOR. BetweOULD `VLOS",
+				"13084647©192399Q404T620B279M21K568GC wit",
+				"12K491GC with do:\"win\"\n\nOR\n\nYOU COUL doe",
+				"12GC with atter mu\n\nOR\n\nYOU COU¢D©`VLOSE",
+				"12GC wing and\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"129GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				"129GC with do:\"atter mu\n\nYOU COULD `V¨OS",
+				"11K699GC with do:\"win\"\n\nOR\n\nYOU COULlife",
+				"11GC with. Betwen\"\n\nOR\n\nYOU COULD `VLOSE",
+				"11GC with do:¢wiuld arguYOU COULD `VLOSE",
+				"11GC with do:¡win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"11GC with do:\"win\"\n\nORuld arguULD `VLOSE",
+				"11GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"118220241¢57¡Q930T49B398M145K24GC with d",
+				"116G§ with do:\"win\"\n\nOR©\nYO¨ COU¤D. Betw",
+				"115GC with do:\"win\"ng andYOU COULD `VLOS",
+				"112GC with ªo:\"win\"\n\nOR\n\nYOlife.LD©`VLOS",
+				"10K570GC with do:\"win\"\n\nOR\n\nYOU COULlife",
+				"10GC wng and:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"10GC wit§ do. Betwe\nOR\n\nYOU COULD `VLOSE",
+				"10GC with ¨o:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"10GC with ¡o:\"win\"\n\nOR\n\nYOU COU. BetweSE",
+				"10GC with his wan\"\n\nOR\n\nYOU COULD `VLOSE",
+				"10GC with do:\"win\"\n\no. BuOU COULD `VLOSE",
+				"107GC ªith . Betwe\"\n\nOR\n\nYOU COULD `VLOS",
+				"106M706K689GC with do:\"win\"¨\nORuld arguU",
+				"103GC with dohis wa\n\nOR\n©YOU CO§LD `VLOS",
+				"102GC with do:\"wilife.R\n\nYOU C¡UL¤ `V¦OS",
+				"101GC with do:\"win\"\n\nOR\natter muLD `VL¨S",
+				"1.3591840024ª43296e+163QGC wing and\"win\"",
+				", after 882©394493e+114QGC with do:\"w¦n\"",
+				"o. BuQ459T91¦B670M239K552GC with do:\"win\"",
+				"atter muwith do:\"win\"\n\nOR\n\nYOU COULD `VLO",
+				"atter mu99B44ªM933K8ªGC with dª:\"win\"\n\nOR",
+				", after ith do:\"win\"¨\nOR\n\nYOU COULD `VLOS",
+				"uld argu365612832953e+260QGC with do:\"win\"",
+				"ng andGC with do:\"win\"\n\nOR¤\nYOU CªULD `VLO",
+				"his wa93GC¡with do:\"win\"\n\nOR\n\nYOU COULD `V",
+				"atter muith do:\"win\"\n\nOR\n\nYOU CªUL¡ `VLOSE",
+				". Betwewith do:\"win\"\n\nOR\n\nYOU COU§DÁ`VLOSE",
+				". Betwewith do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				". Betwe Áith do:\"wi¡\"\n\nOR\n\n§OU COULD `VLOS",
+				"uld arguwith do:\"©in\"\n\nOR\n\nY¨U COULD `VLOSE",
+				"uld argu51M826K885GC with do:\"win\"\n\nOR\n\nYOU",
+				"uld argu433B504M21¢K815GC with do:\"win\"\n\nÁR",
+				"his waC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				". Betwe50GC with do:\"win\"\n\nOR\n\nYOU COU¦D `V",
+				". Betwe4GC with do:\"win\"\n\nOR\n\nYOU COULD `VL",
+				", after with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				", after 285GC with do:\"win\"\n\nOR\n\nYOU COULD ",
+				" doesnC with doÃ\"win\"\n\nOR\n\nYOU COULD ¢VLOSE",
+				" doesnC with do:\"win\"\n\nOR\n\nYOU COULD ¤VLOSE",
+				"uld argu3GC with ¤o:\"win\"\n\nOR\n\nYOU COULD `VL",
+				"uld argu with do:\"win\"\n\nOR\n\n¨OU COULD `VLOSE",
+				"ng andGC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"ng and9Mª38K976GC wi¡h do:\"win\"\n\nOR\n\nYOÁ COU",
+				"doesnK338GC with do:\"win\"\n\nOR\n\nYOU COULD `VL",
+				". Betwe88GC with do:\"win\"\n\nOR\n\nYOU COULD `VL",
+				", after  with do:\"win\"\n\nOR\n\nYOÃ COULD `VLOSE",
+				"uld arguC¨with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"uld arguC with¢do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"ng and02314Q879T621B967M642K¨24GC withÃdo¢\"wi",
+				"life.17Q899T322B60M764K242GC with do:\"win\"\n¨O",
+				"life. 39608Q70T183B86M276K608GC with do:\"win\"",
+				", after GC with do:\"win\"¢\nOR\n\nYOU¤COULD `VLOS",
+				", after GC with do:\"win\"\n\nO©\nÁYOU COU¢D `VLOS",
+				", after 957GC with do:\"win\"\n\nOR\n\nYOU COULD `V",
+				"uld arguM161K92GC with Áo:\"win\"\n\nOR\n\nYOU COULD",
+				"o. Bu 183GC with do:\"wiÃ\"\n\nOR\n\nY¦U COUL© `VLOS",
+				"ng and151GC with do:\"win\"¡\nO§\n\nYOU COULD `VLOS",
+				"his wa14§C with do:\"win\"¨\nOR\n\nYOU COULD `VLOSE",
+				". Betwe79GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOS",
+				". Betwe6GC with do:¤wi¨\"\n\nOR\n\nYOUÃCOU¦D `VLOSE",
+				", after 477GC with do:\"win\"\n\nOR\n\nYO¢ COULD `VL",
+				"life.N 14GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"his wa 23GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE",
+				"atter muK215GC with do:\"win\"\n\nOR\n\nYOU COULD `VL",
+				"atter mu58GC wÃth ¡o:\"win\"\n¦OR\n\nYOU COULD `VLOS",
+				". Betwe10M510K528GC with do:\"win\"\n\nOR\n\nYOU COUL",
+				". Betwe 19GC with do:\"win\"\n\nOR\n\nYOU CO¨LD `VLOSE",
+				", after 172GC with do:\"win\"\n\nOR\n\nYOU COULD¤`VLOS",
+				", after  151K542GC with ¦o:\"win\"\n\nOR\n\nYOU CO©LD ",
+				"uld argu InfinityQGC with¢do:\"win\"\n\nO¢\n\nY¡U COULD",
+				"uld argu 286GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOS"
+			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "LOSE"
 		}
 	]
 }
