--- a/uknown_8s1azb.hax_members.json
+++ b/uknown_8s1azb.hax_members.json
@@ -1,16 +1,126 @@
 {
 	"_id": "uknown_8s1azb.hax_members",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_8s1azb.hax_members",
 	"sector": "NGC_9087",
 	"sec_level": 4,
 	"date_added": 1571531842311,
-	"last_scraped": 0,
+	"last_scraped": 1571533379248,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531842311
+		}
+	],
+	"updt": 1571531941567,
+	"edit": 1,
+	"scrape_ct": 16,
+	"next_scrape": 1571533439248,
+	"category": "clicker",
+	"last_update": 1571533379248,
+	"output": [
+		{
+			"args": {},
+			"calls": 12448,
+			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
+			"fragments": [
+				"centu",
+				"r: wou",
+				"sider: ",
+				"d this ",
+				"re's som",
+				"d we, by",
+				"ave surv"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"centu",
+						"r: wou",
+						"sider: ",
+						"d this ",
+						"re's som",
+						"d we, by",
+						"ave surv"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"click": true
+			},
+			"calls": 7255,
+			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
+			"fragments": [
+				"centu",
+				"r: wou",
+				"sider: ",
+				"d this ",
+				"re's som",
+				"d we, by",
+				"ave surv"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"centu",
+						"r: wou",
+						"sider: ",
+						"d this ",
+						"re's som",
+						"d we, by",
+						"ave surv"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 1142,
+			"base": "`LCLICK SECURED`",
+			"fragments": [
+				"centu",
+				"r: wou",
+				"sider: ",
+				"d this ",
+				"re's som",
+				"d we, by",
+				"ave surv"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"centu",
+						"r: wou",
+						"sider: ",
+						"d this ",
+						"re's som",
+						"d we, by",
+						"ave surv"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "NOT FOUND",
+			"frags": [
+				"centu",
+				"r: wou",
+				"sider: ",
+				"d this ",
+				"re's som",
+				"d we, by",
+				"ave surv"
+			]
 		}
 	]
 }
