--- a/uknown_qm25wy.web.json
+++ b/uknown_qm25wy.web.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_qm25wy.web",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "could not json",
 	"script": "uknown_qm25wy.web",
 	"sector": "VNP_1714",
 	"sec_level": 2,
@@ -12,5 +12,7 @@
 			"type": "added",
 			"when": 1571532094620
 		}
-	]
+	],
+	"updt": 1571532166559,
+	"edit": 1
 }
