--- a/uknown_tuh6rk.t2_scrape.json
+++ b/uknown_tuh6rk.t2_scrape.json
@@ -1,16 +1,75 @@
 {
 	"_id": "uknown_tuh6rk.t2_scrape",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_tuh6rk.t2_scrape",
 	"sector": "NGC_9087",
 	"sec_level": 4,
 	"date_added": 1571531842311,
-	"last_scraped": 0,
+	"last_scraped": 1571533402802,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531842311
+		}
+	],
+	"updt": 1571531941567,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1571533462802,
+	"category": "plant_sim",
+	"last_update": 1571533402802,
+	"output": [
+		{
+			"args": {},
+			"calls": 1079,
+			"base": "c:\"3dc8rg\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				" I wo",
+				"you to",
+				" we un",
+				"way the",
+				"ies jus",
+				" word w",
+				"would en",
+				"we don't",
+				"r but ap",
+				"ComCODE "
+			],
+			"hits": [
+				{
+					"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+					"frags": [
+						" I wo",
+						"you to",
+						" we un",
+						"way the",
+						"ies jus",
+						" word w",
+						"would en",
+						"we don't",
+						"r but ap",
+						"ComCODE "
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+			"frags": [
+				" I wo",
+				"you to",
+				" we un",
+				"way the",
+				"ies jus",
+				" word w",
+				"would en",
+				"we don't",
+				"r but ap",
+				"ComCODE "
+			]
 		}
 	]
 }
