--- a/unknown_5umh34.bcd.json
+++ b/unknown_5umh34.bcd.json
@@ -1,16 +1,133 @@
 {
 	"_id": "unknown_5umh34.bcd",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_5umh34.bcd",
 	"sector": "SPC_8152",
 	"sec_level": 4,
 	"date_added": 1571531842311,
-	"last_scraped": 0,
+	"last_scraped": 1571533330562,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531842311
+		}
+	],
+	"updt": 1571531941567,
+	"edit": 1,
+	"scrape_ct": 17,
+	"next_scrape": 1571533390562,
+	"category": "clicker",
+	"last_update": 1571533330562,
+	"output": [
+		{
+			"args": {},
+			"calls": 14889,
+			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
+			"fragments": [
+				"ay. i",
+				"ht now",
+				"that ma",
+				"ractice",
+				"od prac",
+				"ice. ##",
+				"ok. ## o",
+				"? ## It'"
+			],
+			"hits": [
+				{
+					"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
+					"frags": [
+						"ay. i",
+						"ht now",
+						"that ma",
+						"ractice",
+						"od prac",
+						"ice. ##",
+						"ok. ## o",
+						"? ## It'"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"click": true
+			},
+			"calls": 7050,
+			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
+			"fragments": [
+				"ay. i",
+				"ht now",
+				"that ma",
+				"ractice",
+				"od prac",
+				"ice. ##",
+				"ok. ## o",
+				"? ## It'"
+			],
+			"hits": [
+				{
+					"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
+					"frags": [
+						"ay. i",
+						"ht now",
+						"that ma",
+						"ractice",
+						"od prac",
+						"ice. ##",
+						"ok. ## o",
+						"? ## It'"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 776,
+			"base": "`LCLICK SECURED`",
+			"fragments": [
+				"ay. i",
+				"ht now",
+				"that ma",
+				"ractice",
+				"od prac",
+				"ice. ##",
+				"ok. ## o",
+				"? ## It'"
+			],
+			"hits": [
+				{
+					"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
+					"frags": [
+						"ay. i",
+						"ht now",
+						"that ma",
+						"ractice",
+						"od prac",
+						"ice. ##",
+						"ok. ## o",
+						"? ## It'"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
+			"frags": [
+				"ay. i",
+				"ht now",
+				"that ma",
+				"ractice",
+				"od prac",
+				"ice. ##",
+				"ok. ## o",
+				"? ## It'"
+			]
 		}
 	]
 }
