--- a/unknown_f43glc.db.json
+++ b/unknown_f43glc.db.json
@@ -1,16 +1,63 @@
 {
 	"_id": "unknown_f43glc.db",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_f43glc.db",
 	"sector": "NGC_9087",
 	"sec_level": 4,
 	"date_added": 1571532133068,
-	"last_scraped": 0,
+	"last_scraped": 1571533560089,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571532133068
+		}
+	],
+	"updt": 1571532166559,
+	"edit": 1,
+	"scrape_ct": 18,
+	"next_scrape": 1571533620089,
+	"category": "dice_roller",
+	"last_update": 1571533560089,
+	"output": [
+		{
+			"args": {},
+			"calls": 14186,
+			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
+			"fragments": [
+				"045 i",
+				"ed the",
+				"\\n2086",
+				"t of yo",
+				" Yes, M",
+				"85 Yes, "
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"045 i",
+						"ed the",
+						"\\n2086",
+						"t of yo",
+						" Yes, M",
+						"85 Yes, "
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"045 i",
+				"ed the",
+				"\\n2086",
+				"t of yo",
+				" Yes, M",
+				"85 Yes, "
+			]
 		}
 	]
 }
